--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,12 @@ body {
   font-family: 'Circular Std', sans-serif !important;
 }
 
+.cta-button {
+  box-shadow: 0px 10px 23px -5px rgba(96,225,203,0.75) !important;
+-webkit-box-shadow: 0px 10px 23px -5px rgba(96,225,203,0.75) !important;
+-moz-box-shadow: 0px 10px 23px -5px rgba(96,225,203,0.75) !important;
+}
+
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities;  
