--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,10 @@ body {
 -moz-box-shadow: 0px 10px 23px -5px rgba(96,225,203,0.75) !important;
 }
 
+.backdrop-menu-blur {
+    backdrop-filter: blur(10px); 
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;  
