--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,20 @@ body {
     backdrop-filter: blur(10px); 
 }
 
+.transition-translate {
+  transition-property: transform;
+  -webkit-transition-property: transform;
+}
+
+.modal-show {
+  opacity: 1 !important;
+  transform: translateX(0) !important
+}
+
+.hover-button:hover {
+  transform: scale(1.1) perspective(1px)
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;  
